// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormRow. Snapshots > OneChild 1`] = `
<div>
  <div
    class="_FormRow_aca8be _SM_aca8be"
    data-testid="form-row"
  >
    <div
      class="_Child_aca8be"
    >
      <div
        data-testid="child-0"
        style="background-color: var(--rm-ui-grey-700); border-radius: var(--rm-ui-border-radius-sm); padding: var(--rm-ui-padding-xs); display: flex; align-items: center; justify-content: center;"
      >
        <p
          class="_Center_a0e0af _Regular_a0e0af _HL4_a0e0af _Grey50_a0e0af"
          data-testid="content"
          style="margin: 0px;"
        >
          Placeholder
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormRow. Snapshots > ThreeChildren 1`] = `
<div>
  <div
    class="_FormRow_aca8be _SM_aca8be"
    data-testid="form-row"
  >
    <div
      class="_Child_aca8be"
    >
      <div
        data-testid="child-0"
        style="background-color: var(--rm-ui-grey-700); border-radius: var(--rm-ui-border-radius-sm); padding: var(--rm-ui-padding-xs); display: flex; align-items: center; justify-content: center;"
      >
        <p
          class="_Center_a0e0af _Regular_a0e0af _HL4_a0e0af _Grey50_a0e0af"
          data-testid="content"
          style="margin: 0px;"
        >
          Placeholder
        </p>
      </div>
    </div>
    <div
      class="_Child_aca8be"
    >
      <div
        data-testid="child-1"
        style="background-color: var(--rm-ui-grey-700); border-radius: var(--rm-ui-border-radius-sm); padding: var(--rm-ui-padding-xs); display: flex; align-items: center; justify-content: center;"
      >
        <p
          class="_Center_a0e0af _Regular_a0e0af _HL4_a0e0af _Grey50_a0e0af"
          data-testid="content"
          style="margin: 0px;"
        >
          Placeholder
        </p>
      </div>
    </div>
    <div
      class="_Child_aca8be"
    >
      <div
        data-testid="child-2"
        style="background-color: var(--rm-ui-grey-700); border-radius: var(--rm-ui-border-radius-sm); padding: var(--rm-ui-padding-xs); display: flex; align-items: center; justify-content: center;"
      >
        <p
          class="_Center_a0e0af _Regular_a0e0af _HL4_a0e0af _Grey50_a0e0af"
          data-testid="content"
          style="margin: 0px;"
        >
          Placeholder
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormRow. Snapshots > TwoChildren 1`] = `
<div>
  <div
    class="_FormRow_aca8be _SM_aca8be"
    data-testid="form-row"
  >
    <div
      class="_Child_aca8be"
    >
      <div
        data-testid="child-0"
        style="background-color: var(--rm-ui-grey-700); border-radius: var(--rm-ui-border-radius-sm); padding: var(--rm-ui-padding-xs); display: flex; align-items: center; justify-content: center;"
      >
        <p
          class="_Center_a0e0af _Regular_a0e0af _HL4_a0e0af _Grey50_a0e0af"
          data-testid="content"
          style="margin: 0px;"
        >
          Placeholder
        </p>
      </div>
    </div>
    <div
      class="_Child_aca8be"
    >
      <div
        data-testid="child-1"
        style="background-color: var(--rm-ui-grey-700); border-radius: var(--rm-ui-border-radius-sm); padding: var(--rm-ui-padding-xs); display: flex; align-items: center; justify-content: center;"
      >
        <p
          class="_Center_a0e0af _Regular_a0e0af _HL4_a0e0af _Grey50_a0e0af"
          data-testid="content"
          style="margin: 0px;"
        >
          Placeholder
        </p>
      </div>
    </div>
  </div>
</div>
`;
